# akrion-soccer-engine-rs

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  gameplay-backlog.md  mdp-pomdp-action-schema.md  shell  todos.md
burn-pomdp-solver/: Cargo.toml  codex-engine-sidecar-hook.patch
burn-pomdp-solver/src/: adapter.rs  lib.rs  lib.rs.bak  main.rs
extlib-pomdp-solver/: Cargo.toml  README.md
extlib-pomdp-solver/src/: lib.rs  main.rs
standalone-5v5/: .gitignore  Cargo.toml  FIELD_VECTOR_COVERAGE.md  README.md
standalone-5v5/out_anchor_smoke/: actor.txt  critic.txt  learning_curve.csv  match_after.json  match_before.json  run_manifest.json  speedor.txt
standalone-5v5/out_anchor_smoke2/: actor.txt  critic.txt  learning_curve.csv  match_after.json  match_before.json  run_manifest.json  speedor.txt
standalone-5v5/out_confirm/: actor.txt  critic.txt  learning_curve.csv  match_after.json  match_before.json  run_manifest.json  speedor.txt
standalone-5v5/out_contextual_bounds_20260713/: actor.txt  critic.txt  learning_curve.csv  match_after.json  match_before.json  run_manifest.json  speedor.txt
standalone-5v5/out_finishing_diag_20260713/: actor.txt  critic.txt  learning_curve.csv  match_after.json  run_manifest.json  speedor.txt
standalone-5v5/out_full_anchor_gk/: actor.txt  critic.txt  learning_curve.csv  match_after.json  match_before.json  run_manifest.json  speedor.txt
standalone-5v5/out_gk_smoke/: actor.txt  critic.txt  match_after.json  match_before.json  run_manifest.json  speedor.txt
standalone-5v5/out_legacy_smoke/: learning_curve.csv  run_manifest.json
standalone-5v5/out_optimal/: actor.txt  critic.txt  learning_curve.csv  match_after.json  match_before.json  match_live.json  run_manifest.json  speedor.txt
standalone-5v5/out_phys_seed777/: actor.txt  critic.txt  learning_curve.csv  match_after.json  match_before.json  run_manifest.json  speedor.txt
standalone-5v5/out_phys_smoke/: actor.txt  critic.txt  learning_curve.csv  match_after.json  match_before.json  run_manifest.json  speedor.txt
standalone-5v5/out_phys_smoke60/: actor.txt  critic.txt  learning_curve.csv  match_after.json  match_before.json  run_manifest.json  speedor.txt
standalone-5v5/out_phys_smoke60b/: actor.txt  critic.txt  learning_curve.csv  match_after.json  match_before.json  run_manifest.json  speedor.txt
standalone-5v5/out_physics_validate/: actor.txt  critic.txt  selfplay_ladder.csv  speedor.txt
standalone-5v5/out_physics_validate2/: selfplay_ladder.csv  speedor.txt
standalone-5v5/out_physics_validate2/champions/gen1/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_physics_validate2/champions/gen2/: actor.txt  critic.txt
standalone-5v5/out_probe_frozen/: actor.txt  critic.txt  learning_curve.csv  match_after.json  match_before.json  run_manifest.json  speedor.txt
standalone-5v5/out_probe_lowfear/: actor.txt  critic.txt  learning_curve.csv  match_after.json  match_before.json  run_manifest.json  speedor.txt
standalone-5v5/out_selfplay/champions/gen1/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay/champions/gen2/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay/champions/gen3/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay/champions/gen4/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay/champions/gen5/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay/champions/gen6/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay/champions/gen7/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/: critic.txt  selfplay_ladder.csv  speedor.txt
standalone-5v5/out_selfplay2/champions/gen1/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen10/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen11/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen12/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen13/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen14/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen15/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen16/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen17/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen18/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen19/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen2/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen20/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen21/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen22/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen23/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen24/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen25/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen26/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen27/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen28/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen29/: actor.txt
standalone-5v5/out_selfplay2/champions/gen3/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen4/: actor.txt  critic.txt  speedor.txt
standalone-5v5/out_selfplay2/champions/gen5/: actor.txt  critic.txt  speedor.txt
standalone-5v5/src/: game.rs  main.rs  nn.rs  rng.rs  train.rs
standalone-5v5/viz/: assemble.py  index.html  selfplay_viz.py  serve.sh  serve_live.py  serve_selfplay.py  template.html  tune.py
standalone-5v5/viz/teach/: data.json  gen_data.py  index.html  serve.py
standalone-5v5/viz/teach11/: data.json  epv_grid_real.json  gen_data.py  index.html  serve.py
(+233 files in other folders)
