# soccer-sim-game-engine — the agnostic soccer simulation + learning library.
#
# Depends on `des_engine` for the generic optimization/learning primitives
# (LP/IP-MIP/Clarabel, neural-network MLP + policy-gradient, MDP/POMDP, PRNG,
# animation framework). Contains NO HTTP server by default so a desktop game can
# import it clean; the web request→reply bridge and the legacy embedded socket
# server are gated behind opt-in features.
#
# During the extraction this is a workspace member of discrete-event-system.rs;
# it is promoted to its own repo (soccer-sim-game-engine.rs) at P4, at which
# point `des_engine` becomes `{ path = "../discrete-event-system.rs" }`.
[package]
name = "soccer_engine"
version = "0.0.1"
edition = "2021"
description = "Agnostic 2D soccer simulation + reinforcement-learning game engine, built on des_engine."
license = "MIT OR Apache-2.0"
# Soccer modules + bins are wired in Step B of the extraction; until then the
# moved files sit un-declared (orphaned) and these auto-discovery flags keep the
# skeleton crate building green.

[lib]
name = "soccer_engine"

[dependencies]
des_engine = { path = "../discrete-event-system.rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# Postgres-backed learning persistence (soccer_learning_pg). Non-optional for now
# to land the extraction green; gated behind a feature in a follow-up so the
# desktop-game / pure-sim build can drop the DB stack.
postgres = { version = "0.19", features = ["with-serde_json-1"] }
native-tls = "0.2"
postgres-native-tls = "0.5"

[features]
default = []
# Reserved for the agnostic-engine split (follow-up): the transport-agnostic web
# request→reply bridge + HTML generators, and the legacy embedded socket server.
web-bridge = []
embedded-http-server = ["web-bridge"]
