# soccer-sim-game-engine — the agnostic soccer simulation + learning library.
#
# Depends on `des_engine` for the generic optimization/learning primitives
# (LP/IP-MIP/Clarabel, neural-network MLP + policy-gradient, MDP/POMDP, PRNG,
# animation framework). Contains NO HTTP server by default so a desktop game can
# import it clean; the web request→reply bridge and the legacy embedded socket
# server are gated behind opt-in features.
#
# During the extraction this is a workspace member of discrete-event-system.rs;
# it is promoted to its own repo (soccer-sim-game-engine.rs) at P4, at which
# point `des_engine` becomes `{ path = "../discrete-event-system.rs" }`.
[package]
name = "soccer_engine"
version = "0.0.1"
edition = "2021"
description = "Agnostic 2D soccer simulation + reinforcement-learning game engine, built on des_engine."
license = "MIT OR Apache-2.0"
# Soccer modules + bins are wired in Step B of the extraction; until then the
# moved files sit un-declared (orphaned) and these auto-discovery flags keep the
# skeleton crate building green.

[lib]
name = "soccer_engine"

[dependencies]
des_engine = { path = "../discrete-event-system.rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
opentelemetry = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["http-proto", "reqwest-blocking-client", "trace"] }
opentelemetry_sdk = { version = "0.32", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# Postgres-backed learning persistence is opt-in so desktop/pure-sim builds can
# skip the DB + TLS stack.
postgres = { version = "0.19", features = ["with-serde_json-1"], optional = true }
native-tls = { version = "0.2", optional = true }
postgres-native-tls = { version = "0.5", optional = true }
# Zero-copy shared-memory snapshot ring for the external live-state inspector
# (src/des/general/soccer/inspect.rs + the `soccer_inspect` bin). Tiny, pure,
# cross-platform (macOS dev + Linux cluster); writer maps MmapMut, readers Mmap.
memmap2 = "0.9"

[features]
default = []
postgres-persistence = ["dep:postgres", "dep:native-tls", "dep:postgres-native-tls"]
animation-tools = []
planner = ["animation-tools"]
streaming = ["planner"]
rotation-demo = ["animation-tools"]
live-server = []
# Reserved for the agnostic-engine split (follow-up): the transport-agnostic web
# request→reply bridge + HTML generators, and the legacy embedded socket server.
web-bridge = []
embedded-http-server = ["web-bridge"]

[[bin]]
name = "main_soccer_learning_server"
path = "src/bin/main_soccer_learning_server.rs"
required-features = ["postgres-persistence"]

[[bin]]
name = "main_soccer_tournament_run"
path = "src/bin/main_soccer_tournament_run.rs"
required-features = ["postgres-persistence"]

[[bin]]
name = "main_soccer_learning_run"
path = "src/bin/main_soccer_learning_run.rs"
required-features = ["postgres-persistence"]

[[bin]]
name = "main_soccer_offline_train"
path = "src/bin/main_soccer_offline_train.rs"
required-features = ["postgres-persistence"]

[[bin]]
name = "soccer_league_train"
path = "src/bin/soccer_league_train.rs"

[[bin]]
name = "main_soccer_set_play_learning_run"
path = "src/bin/main_soccer_set_play_learning_run.rs"
required-features = ["postgres-persistence"]

[[bin]]
name = "main_soccer_learning_queue"
path = "src/bin/main_soccer_learning_queue.rs"
required-features = ["postgres-persistence"]

[[bin]]
name = "main_soccer_planner"
path = "src/bin/main_soccer_planner.rs"
required-features = ["planner"]

[[bin]]
name = "main_soccer_rotation"
path = "src/bin/main_soccer_rotation.rs"
required-features = ["rotation-demo"]

[[bin]]
name = "main_soccer_rotation_anim"
path = "src/bin/main_soccer_rotation_anim.rs"
required-features = ["rotation-demo"]

[[bin]]
name = "main_soccer_live"
path = "src/bin/main_soccer_live.rs"
required-features = ["live-server"]

[[bin]]
name = "main_soccer_live_5056"
path = "src/bin/main_soccer_live_5056.rs"
required-features = ["live-server"]

[[bin]]
name = "rollout_poc"
path = "src/bin/rollout_poc.rs"
