[package]
name = "burn-pomdp-solver"
version = "0.0.1"
edition = "2021"
description = "Burn-backed recurrent, permutation-invariant CTDE actor-critic — a real learned POMDP solver for the soccer engine (Lock-2)."

[dependencies]
burn = { version = "0.16", features = ["ndarray", "autodiff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
wgpu = ["burn/wgpu"]
