[package]
name = "extlib-pomdp-solver"
version = "0.0.1"
edition = "2021"
description = "Candle-backed permutation-invariant recurrent CTDE actor-critic — a proper POMDP solver to replace the 1-layer hand-rolled MLP. Skeleton / architecture proof."

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"

[features]
metal = ["candle-core/metal", "candle-nn/metal"]
