# Standalone 5-a-side learning demo — deliberately hermetic.
#
# NO external dependencies (own PRNG, own MLP + PPO), and an empty [workspace]
# table so it detaches from the surrounding soccer-engine / des_engine workspace
# and can be built in complete isolation:
#
#     cargo run --release -- train
#
# The whole point is a system small enough that you can SEE learning happen:
# a 5v5 sim with the same macro action vocabulary (shoot|pass|dribble|clear|hold)
# but none of the LP/IPM formation machinery, POMDP feature stack, or DB.
[package]
name = "fiveaside"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fiveaside"
path = "src/main.rs"

[dependencies]

# Detach from any parent cargo workspace.
[workspace]

[profile.dev]
incremental = false

[profile.test]
incremental = false

[profile.release]
opt-level = 3
lto = "thin"
